<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- BATTERY DISPLAY TextView -->
        <TextView
            android:id="@+id/batteryLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:text="Battery: --%"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controller_app_installed"
                android:textColor="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/installed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_24"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linked_to_glasses"
                android:textColor="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/linked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_24"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glasses_connected"
                android:textColor="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_24"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glasses_controlled"
                android:textColor="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/controlled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_24"
                tools:ignore="ContentDescription" />
        </LinearLayout>


        <EditText
            android:id="@+id/textBox"
            android:layout_width="304dp"
            android:layout_height="159dp"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/text_hint"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="2"
            android:outlineAmbientShadowColor="@android:color/darker_gray"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/displayTextButton"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:text="@string/display_text" />

        <Button
            android:id="@+id/clearTextButton"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:text="@string/clear_text" />

    </LinearLayout>
</ScrollView>